wesay (1.1.11-1) UNRELEASED; urgency=low

  * WS-34262 mime types to allow lift and wesayconfig files to open from gui
  * WS-34260 chorus - disable win32text extension warning

 -- Daniel Glassey <daniel_glassey@sil.org>  Mon, 30 Apr 2012 11:31:44 +0700

wesay (1.1.10-1) UNRELEASED; urgency=low

  * disabled complaint about missing keyboard ime if autoswitching disabled
  * update palaso, chorus and wesay to windows wesay 1.2

 -- Daniel Glassey <daniel_glassey@sil.org>  Fri, 27 Apr 2012 13:59:45 +0700

wesay (1.1.9-1) UNRELEASED; urgency=low

  * update palaso lib to get fixes from there
  * update chorus lib to get fixes from there
  * fix ProblemNotification dialog

 -- Daniel Glassey <daniel_glassey@sil.org>  Thu, 16 Feb 2012 09:27:52 +0700

wesay (1.1.8-1) UNRELEASED; urgency=low

  * WS-34306 disable liftreports which has not been used on windows for years

 -- Daniel Glassey <daniel_glassey@sil.org>  Mon, 13 Feb 2012 14:29:43 +0700

wesay (1.1.7-1) UNRELEASED; urgency=low

  * WS-34305 Use LibreOffice 3.4 or later to create a pdf
	  See https://wiki.ubuntu.com/LibreOffice for instructions for installing
	  LibreOffice 3.4 on lucid (which also works for natty)
	  it comes with oneiric onwards
  * add Suggests on libreoffice-writer >= 3.4, and pdf-viewer

 -- Daniel Glassey <daniel_glassey@sil.org>  Fri, 10 Feb 2012 16:04:46 +0700

wesay (1.1.6-1) UNRELEASED; urgency=low

  * WS-34300 fix template location and common dir
	  this was breaking xhtml and simple pdf export
  * hatton: Fix WS-34227
  * WS-1187 PrinceXML export really working now

 -- Daniel Glassey <daniel_glassey@sil.org>  Thu, 09 Feb 2012 11:02:48 +0700

wesay (1.1.5-1) UNRELEASED; urgency=low

  * disable progress box on "Loading dictionary"
  * simple pdf generation with princexml enabled
	  N.B. use libreoffice for better pdfs

 -- Daniel Glassey <daniel_glassey@sil.org>  Mon, 06 Feb 2012 15:54:29 +0700

wesay (1.1.4-1) UNRELEASED; urgency=low

  * fix odf template location finding