@@ -2,8 +2,10 @@ wesay (1.1.11-1) UNRELEASED; urgency=low
 
   * WS-34262 mime types to allow lift and wesayconfig files to open from gui
   * WS-34260 chorus - disable win32text extension warning
+  * WS-34363 stop two versions of wesay running for same lift file
+  * WS-34295 libreoffice 3.5 and pdf creation
 
- -- Daniel Glassey <daniel_glassey@sil.org>  Mon, 30 Apr 2012 11:31:44 +0700
+ -- Daniel Glassey <daniel_glassey@sil.org>  Tue, 01 May 2012 10:41:48 +0700
 
 wesay (1.1.10-1) UNRELEASED; urgency=low
 
